Fix spacing on bulk actions from on the product page's combination section

--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -120,6 +120,11 @@
     width: 97%;
     font-size: 0.75rem;
     font-weight: 600;
+
+    #bulk-combinations-container-fields > div {
+      @extend .px-3;
+      @extend .py-2;
+    }
   }
 
   .product-footer {
